--- a/mock_experiment_example.qmd
+++ b/mock_experiment_example.qmd
@@ -948,7 +948,7 @@ most_recent_imaging_date <- processed_data %>%
 high_flux_mice <- processed_data %>%
   filter(imaging_date == most_recent_imaging_date,
          total_flux >= 2e+10,
-         is.na(death_date))  # Correct filter to find only alive mice
+         death_date == "")  # Correct filter to find only alive mice
 
 # Read the 'raw_mass.csv' file into a data frame
 raw_mass <- read.csv("data/raw/raw_mass.csv")
